Add Builders wand

--- a/src/main/resources/assets/grimmsmod/lang/en_us.json
+++ b/src/main/resources/assets/grimmsmod/lang/en_us.json
@@ -6,5 +6,6 @@
   "gui.grimmsmod.stats_gui.label_empty": "/",
   "item_group.grimmsmod.grimms_mod": "Grimm\u0027s Mod",
   "gui.grimmsmod.stats_gui.button_prestige": "Prestige",
+  "item.grimmsmod.builders_wand": "Builders Wand",
   "item.grimmsmod.fancy_clock": "Fancy Clock"
 }
