Fix Builders wand

--- a/src/main/resources/assets/grimmsmod/lang/en_us.json
+++ b/src/main/resources/assets/grimmsmod/lang/en_us.json
@@ -2,10 +2,12 @@
   "key.categories.grimmsmod": "Grimm\u0027s Mod Keybinds",
   "gui.grimmsmod.stats_gui.label_empty1": "/",
   "key.grimmsmod.open_stats": "Open Stats",
+  "item_group.grimmsmod.grimms_mod_special": "Grimms Mod Special",
   "item.grimmsmod.fancier_clock": "Fancier Clock",
   "gui.grimmsmod.stats_gui.label_empty": "/",
   "item_group.grimmsmod.grimms_mod": "Grimm\u0027s Mod",
   "gui.grimmsmod.stats_gui.button_prestige": "Prestige",
   "item.grimmsmod.builders_wand": "Builders Wand",
-  "item.grimmsmod.fancy_clock": "Fancy Clock"
+  "item.grimmsmod.fancy_clock": "Fancy Clock",
+  "item.grimmsmod.placeholder": "Placeholder"
 }
