--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -7,25 +7,28 @@
   "item_group.grimmsmod.grimms_mod": "Grimm\u0027s Mod",
   "item_group.grimms.grimms_mod": "Grimm\u0027s Mod",
   "item.grimms.handheld_microscope": "Handheld Microscope",
-  "item.grimmsmod.placeholder": "Placeholder",
   "item.grimmsmod.fancy_clock": "Fancy Clock",
-  "gui.grimmsmod.stats_gui.label_empty1": "/",
+  "item.grimmsmod.placeholder": "Placeholder",
   "key.grimms.open_stats": "Open Stats",
+  "gui.grimmsmod.stats_gui.label_empty1": "/",
   "key.grimmsmod.open_stats": "Open Stats",
   "item.grimmsmod.fancier_clock": "Fancier Clock",
   "item_group.grimms.grimms_mod_special": "Grimms Mod Special",
   "item.grimms.disinfectant_scalpel": "Disinfectant Scalpel",
   "gui.grimmsmod.stats_gui.button_prestige": "Prestige",
   "item.grimmsmod.builders_wand": "Builders Wand",
+  "item.grimms.iron_hammer": "Wooden Hammer",
   "item.grimms.thrash": "Thrash",
   "item.grimmsmod.multi_use_scalpel": "Multi Use Scalpel",
   "gui.grimms.stats_gui.button_prestige": "Prestige",
+  "item.grimms.diamond_hammer": "Wooden Hammer",
   "gui.grimms.stats_gui.label_empty": "/",
   "key.categories.grimmsmod": "Grimm\u0027s Mod Keybinds",
   "item.grimms.builders_wand": "Builders Wand",
   "item.grimms.placeholder": "Placeholder",
   "item_group.grimmsmod.grimms_mod_special": "Grimms Mod Special",
   "gui.grimmsmod.stats_gui.label_empty": "/",
+  "item.grimms.steel": "Steel",
   "item.grimmsmod.logo": "Logo",
   "advancements.install_grimms_mod.descr": "Install Grimm\u0027s Mod on minecraft, reworked, remade, updated",
   "item.grimms.logo": "Logo",
@@ -33,5 +36,7 @@
   "item.grimms.multi_use_scalpel": "Multi Use Scalpel",
   "item.grimms.fancy_clock": "Fancy Clock",
   "gui.grimms.stats_gui.label_empty1": "/",
-  "advancements.install_grimms_mod.title": "Install Grimm\u0027s Mod"
+  "item.grimms.wooden_hammer": "Wooden Hammer",
+  "advancements.install_grimms_mod.title": "Install Grimm\u0027s Mod",
+  "item.grimms.netherite_hammer": "Wooden Hammer"
 }
