Added lifesteal enchant and Item leveling, Todo: fix ItemXpHandle

--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -1,14 +1,14 @@
 {
-  "item.grimms.microscope": "Microscope",
-  "item.grimmsmod.handheld_microscope": "Handheld Microscope",
   "item.grimmsmod.microscope": "Microscope",
+  "item.grimmsmod.handheld_microscope": "Handheld Microscope",
+  "item.grimms.microscope": "Microscope",
   "item.grimms.scalpel": "Scalpel",
   "item.grimmsmod.scalpel": "Scalpel",
   "item_group.grimmsmod.grimms_mod": "Grimm\u0027s Mod",
   "item_group.grimms.grimms_mod": "Grimm\u0027s Mod",
   "item.grimms.handheld_microscope": "Handheld Microscope",
-  "item.grimmsmod.placeholder": "Placeholder",
   "item.grimmsmod.fancy_clock": "Fancy Clock",
+  "item.grimmsmod.placeholder": "Placeholder",
   "key.grimms.open_stats": "Open Stats",
   "gui.grimmsmod.stats_gui.label_empty1": "/",
   "key.grimmsmod.open_stats": "Open Stats",
@@ -21,6 +21,7 @@
   "item.grimms.thrash": "Thrash",
   "item.grimmsmod.multi_use_scalpel": "Multi Use Scalpel",
   "gui.grimms.stats_gui.button_prestige": "Prestige",
+  "enchantment.grimms.lifesteal": "Lifesteal",
   "item.grimms.diamond_hammer": "Wooden Hammer",
   "gui.grimms.stats_gui.label_empty": "/",
   "key.categories.grimmsmod": "Grimm\u0027s Mod Keybinds",
