--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -19,6 +19,7 @@
   "item.grimmsmod.builders_wand": "Builders Wand",
   "item.grimms.iron_hammer": "Wooden Hammer",
   "item.grimms.thrash": "Thrash",
+  "item.grimms.katana": "Katana",
   "item.grimmsmod.multi_use_scalpel": "Multi Use Scalpel",
   "gui.grimms.stats_gui.button_prestige": "Prestige",
   "enchantment.grimms.lifesteal": "Lifesteal",
