Add money system, Soulbound ench, fixed Lifesteal, Sharp ench, add katana item, add huds

--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -1,44 +1,57 @@
 {
-  "item.grimmsmod.microscope": "Microscope",
   "item.grimmsmod.handheld_microscope": "Handheld Microscope",
-  "item.grimms.microscope": "Microscope",
+  "item.grimmsmod.microscope": "Microscope",
+  "advancements.level_up_2.descr": "Level up to level 45",
   "item.grimms.scalpel": "Scalpel",
   "item.grimmsmod.scalpel": "Scalpel",
   "item_group.grimmsmod.grimms_mod": "Grimm\u0027s Mod",
-  "item_group.grimms.grimms_mod": "Grimm\u0027s Mod",
-  "item.grimms.handheld_microscope": "Handheld Microscope",
-  "item.grimmsmod.fancy_clock": "Fancy Clock",
+  "advancements.prestige.title": "Prestige",
   "item.grimmsmod.placeholder": "Placeholder",
-  "key.grimms.open_stats": "Open Stats",
+  "death.attack.bleeding_damage.player": "%1$s lost too much blood whilst trying to escape %2$s",
   "gui.grimmsmod.stats_gui.label_empty1": "/",
-  "key.grimmsmod.open_stats": "Open Stats",
   "item.grimmsmod.fancier_clock": "Fancier Clock",
-  "item_group.grimms.grimms_mod_special": "Grimms Mod Special",
-  "item.grimms.disinfectant_scalpel": "Disinfectant Scalpel",
+  "advancements.level_up_2.title": "Level Up 2",
   "gui.grimmsmod.stats_gui.button_prestige": "Prestige",
   "item.grimmsmod.builders_wand": "Builders Wand",
-  "item.grimms.iron_hammer": "Wooden Hammer",
-  "item.grimms.thrash": "Thrash",
+  "advancements.level_up.descr": "Level up for the first time",
   "item.grimms.katana": "Katana",
-  "item.grimmsmod.multi_use_scalpel": "Multi Use Scalpel",
+  "effect.grimms.bleeding": "Bleeding",
   "gui.grimms.stats_gui.button_prestige": "Prestige",
-  "enchantment.grimms.lifesteal": "Lifesteal",
   "item.grimms.diamond_hammer": "Wooden Hammer",
-  "gui.grimms.stats_gui.label_empty": "/",
-  "key.categories.grimmsmod": "Grimm\u0027s Mod Keybinds",
   "item.grimms.builders_wand": "Builders Wand",
   "item.grimms.placeholder": "Placeholder",
-  "item_group.grimmsmod.grimms_mod_special": "Grimms Mod Special",
-  "gui.grimmsmod.stats_gui.label_empty": "/",
-  "item.grimms.steel": "Steel",
-  "item.grimmsmod.logo": "Logo",
   "advancements.install_grimms_mod.descr": "Install Grimm\u0027s Mod on minecraft, reworked, remade, updated",
-  "item.grimms.logo": "Logo",
+  "enchantment.grimms.soulbound": "Soulbound",
   "item.grimms.fancier_clock": "Fancier Clock",
   "item.grimms.multi_use_scalpel": "Multi Use Scalpel",
   "item.grimms.fancy_clock": "Fancy Clock",
   "gui.grimms.stats_gui.label_empty1": "/",
   "item.grimms.wooden_hammer": "Wooden Hammer",
-  "advancements.install_grimms_mod.title": "Install Grimm\u0027s Mod",
-  "item.grimms.netherite_hammer": "Wooden Hammer"
+  "item.grimms.netherite_hammer": "Wooden Hammer",
+  "item.grimms.microscope": "Microscope",
+  "enchantment.grimms.sharp": "Sharp",
+  "item_group.grimms.grimms_mod": "Grimm\u0027s Mod",
+  "item.grimms.handheld_microscope": "Handheld Microscope",
+  "item.grimmsmod.fancy_clock": "Fancy Clock",
+  "key.grimms.open_stats": "Open Stats",
+  "key.grimmsmod.open_stats": "Open Stats",
+  "item_group.grimms.grimms_mod_special": "Grimms Mod Special",
+  "advancements.level_up.title": "Level Up",
+  "item.grimms.death_package": "Death Package",
+  "item.grimms.disinfectant_scalpel": "Disinfectant Scalpel",
+  "item.grimms.iron_hammer": "Wooden Hammer",
+  "death.attack.bleeding_damage.item": "%1$s was bled to death by %2$s using %3$s",
+  "item.grimms.thrash": "Thrash",
+  "item.grimmsmod.multi_use_scalpel": "Multi Use Scalpel",
+  "enchantment.grimms.lifesteal": "Lifesteal",
+  "advancements.prestige.descr": "Prestige for the first time for special benefits!",
+  "death.attack.bleeding_damage": "%1$s lost too much blood",
+  "gui.grimms.stats_gui.label_empty": "/",
+  "key.categories.grimmsmod": "Grimm\u0027s Mod Keybinds",
+  "item_group.grimmsmod.grimms_mod_special": "Grimms Mod Special",
+  "gui.grimmsmod.stats_gui.label_empty": "/",
+  "item.grimms.steel": "Steel",
+  "item.grimmsmod.logo": "Logo",
+  "item.grimms.logo": "Logo",
+  "advancements.install_grimms_mod.title": "Install Grimm\u0027s Mod"
 }
