Fix soulbound and keepinventory, add partial support to prestige upgrades, Add TV's

--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -1,23 +1,26 @@
 {
-  "advancements.level_up_2.descr": "Level up to level 45",
-  "item.grimmsmod.microscope": "Microscope",
   "item.grimmsmod.handheld_microscope": "Handheld Microscope",
+  "item.grimmsmod.microscope": "Microscope",
+  "advancements.level_up_2.descr": "Level up to level 45",
   "item.grimms.scalpel": "Scalpel",
   "item.grimmsmod.scalpel": "Scalpel",
   "item_group.grimmsmod.grimms_mod": "Grimm\u0027s Mod",
   "advancements.prestige.title": "Prestige",
-  "death.attack.bleeding_damage.player": "%1$s lost too much blood whilst trying to escape %2$s",
   "item.grimmsmod.placeholder": "Placeholder",
+  "death.attack.bleeding_damage.player": "%1$s lost too much blood whilst trying to escape %2$s",
   "gui.grimmsmod.stats_gui.label_empty1": "/",
   "item.grimmsmod.fancier_clock": "Fancier Clock",
+  "gui.grimms.prestige_upgrades_gui.label_name_na_level0_maxlevel0": "Name: N/A Level:0 MaxLevel:0",
   "advancements.level_up_2.title": "Level Up 2",
   "gui.grimmsmod.stats_gui.button_prestige": "Prestige",
   "item.grimmsmod.builders_wand": "Builders Wand",
+  "gui.grimms.prestige_upgrades_gui.button_upgrade": "Upgrade",
   "advancements.level_up.descr": "Level up for the first time",
-  "effect.grimms.bleeding": "Bleeding",
+  "gui.grimms.prestige_upgrades_gui.button_next": "Next",
   "item.grimms.katana": "Katana",
+  "effect.grimms.bleeding": "Bleeding",
   "gui.grimms.stats_gui.button_prestige": "Prestige",
-  "item.grimms.diamond_hammer": "Wooden Hammer",
+  "item.grimms.diamond_hammer": "Diamond Hammer",
   "item.grimms.builders_wand": "Builders Wand",
   "item.grimms.placeholder": "Placeholder",
   "advancements.install_grimms_mod.descr": "Install Grimm\u0027s Mod on minecraft, reworked, remade, updated",
@@ -27,11 +30,13 @@
   "item.grimms.fancy_clock": "Fancy Clock",
   "gui.grimms.stats_gui.label_empty1": "/",
   "item.grimms.wooden_hammer": "Wooden Hammer",
-  "item.grimms.netherite_hammer": "Wooden Hammer",
+  "item.grimms.netherite_hammer": "Netherite Hammer",
   "item.grimms.microscope": "Microscope",
+  "gui.grimms.prestige_upgrades_gui.sid": "0",
   "enchantment.grimms.sharp": "Sharp",
   "item_group.grimms.grimms_mod": "Grimm\u0027s Mod",
   "item.grimms.handheld_microscope": "Handheld Microscope",
+  "gui.grimms.prestige_upgrades_gui.prestigeupgradeid": "N/A",
   "item.grimmsmod.fancy_clock": "Fancy Clock",
   "key.grimms.open_stats": "Open Stats",
   "key.grimmsmod.open_stats": "Open Stats",
@@ -39,7 +44,7 @@
   "advancements.level_up.title": "Level Up",
   "item.grimms.death_package": "Death Package",
   "item.grimms.disinfectant_scalpel": "Disinfectant Scalpel",
-  "item.grimms.iron_hammer": "Wooden Hammer",
+  "item.grimms.iron_hammer": "Iron Hammer",
   "death.attack.bleeding_damage.item": "%1$s was bled to death by %2$s using %3$s",
   "item.grimms.thrash": "Thrash",
   "item.grimmsmod.multi_use_scalpel": "Multi Use Scalpel",
