Added transmutation and prestige upgrades, improved item leveling and added command for it. TODO: Fix onentityhit and finish itemxphandle

--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -1,30 +1,40 @@
 {
-  "item.grimmsmod.handheld_microscope": "Handheld Microscope",
-  "item.grimmsmod.microscope": "Microscope",
+  "death.attack.prestige_damage_boost.player": "%1$s was killed by while trying to escape %2$s\u0027s prestige boost",
   "advancements.level_up_2.descr": "Level up to level 45",
+  "item.grimmsmod.microscope": "Microscope",
+  "item.grimmsmod.handheld_microscope": "Handheld Microscope",
   "item.grimms.scalpel": "Scalpel",
   "item.grimmsmod.scalpel": "Scalpel",
   "item_group.grimmsmod.grimms_mod": "Grimm\u0027s Mod",
+  "gui.grimms.transmutation_gui.itemid": "Item registry name",
   "advancements.prestige.title": "Prestige",
-  "item.grimmsmod.placeholder": "Placeholder",
   "death.attack.bleeding_damage.player": "%1$s lost too much blood whilst trying to escape %2$s",
+  "item.grimmsmod.placeholder": "Placeholder",
   "gui.grimmsmod.stats_gui.label_empty1": "/",
-  "item.grimmsmod.fancier_clock": "Fancier Clock",
   "gui.grimms.prestige_upgrades_gui.label_name_na_level0_maxlevel0": "Name: N/A Level:0 MaxLevel:0",
+  "item.grimmsmod.fancier_clock": "Fancier Clock",
+  "death.attack.item_level_damage_boost.item": "%1$s was killed by %2$s using %3$s",
   "advancements.level_up_2.title": "Level Up 2",
+  "death.attack.item_level_damage_boost.player": "%1$s died whilst trying to escape %2$s",
   "gui.grimmsmod.stats_gui.button_prestige": "Prestige",
+  "entity.grimms.test_dummy": "Test Dummy",
   "item.grimmsmod.builders_wand": "Builders Wand",
   "gui.grimms.prestige_upgrades_gui.button_upgrade": "Upgrade",
   "advancements.level_up.descr": "Level up for the first time",
   "gui.grimms.prestige_upgrades_gui.button_next": "Next",
-  "item.grimms.katana": "Katana",
+  "gui.grimms.transmutation_gui.label_liquidate_item": "Liquidate Item",
   "effect.grimms.bleeding": "Bleeding",
+  "item.grimms.katana": "Katana",
   "gui.grimms.stats_gui.button_prestige": "Prestige",
   "item.grimms.diamond_hammer": "Diamond Hammer",
+  "item.grimms.test_dummy_spawn_egg": "Test Dummy Spawn Egg",
   "item.grimms.builders_wand": "Builders Wand",
   "item.grimms.placeholder": "Placeholder",
+  "enchantment.grimms.xp_boost": "Xp Boost",
+  "death.attack.item_level_damage_boost": "%1$s died",
   "advancements.install_grimms_mod.descr": "Install Grimm\u0027s Mod on minecraft, reworked, remade, updated",
   "enchantment.grimms.soulbound": "Soulbound",
+  "gui.grimms.stats_gui.button_open_prestige_upgrades": "Open Prestige Upgrades",
   "item.grimms.fancier_clock": "Fancier Clock",
   "item.grimms.multi_use_scalpel": "Multi Use Scalpel",
   "item.grimms.fancy_clock": "Fancy Clock",
@@ -32,7 +42,9 @@
   "item.grimms.wooden_hammer": "Wooden Hammer",
   "item.grimms.netherite_hammer": "Netherite Hammer",
   "item.grimms.microscope": "Microscope",
+  "item.grimms.transmutation_tablet": "Transmutation Tablet",
   "gui.grimms.prestige_upgrades_gui.sid": "0",
+  "gui.grimms.transmutation_gui.label_tv": "TV:",
   "enchantment.grimms.sharp": "Sharp",
   "item_group.grimms.grimms_mod": "Grimm\u0027s Mod",
   "item.grimms.handheld_microscope": "Handheld Microscope",
@@ -40,10 +52,12 @@
   "item.grimmsmod.fancy_clock": "Fancy Clock",
   "key.grimms.open_stats": "Open Stats",
   "key.grimmsmod.open_stats": "Open Stats",
+  "death.attack.prestige_damage_boost": "%1$s died",
   "item_group.grimms.grimms_mod_special": "Grimms Mod Special",
   "advancements.level_up.title": "Level Up",
   "item.grimms.death_package": "Death Package",
   "item.grimms.disinfectant_scalpel": "Disinfectant Scalpel",
+  "death.attack.prestige_damage_boost.item": "%1$s was killed by %2$s\u0027s prestige boost using %3$s",
   "item.grimms.iron_hammer": "Iron Hammer",
   "death.attack.bleeding_damage.item": "%1$s was bled to death by %2$s using %3$s",
   "item.grimms.thrash": "Thrash",
