Remove isplayerinit and check per field initializing datamaps add some placeholder blocks which will be usable when crafting is done

--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -38,6 +38,7 @@
   "item.grimms.placeholder": "Placeholder",
   "enchantment.grimms.xp_boost": "Xp Boost",
   "death.attack.item_level_damage_boost": "%1$s died",
+  "block.grimms.distillery": "Distillery",
   "advancements.install_grimms_mod.descr": "Install Grimm\u0027s Mod on minecraft, reworked, remade, updated",
   "enchantment.grimms.soulbound": "Soulbound",
   "gui.grimms.stats_gui.button_open_prestige_upgrades": "Open Prestige Upgrades",
@@ -47,6 +48,7 @@
   "gui.grimms.stats_gui.label_empty1": "/",
   "item.grimms.wooden_hammer": "Wooden Hammer",
   "item.grimms.iron_dust": "Iron Dust",
+  "block.grimms.refinery": "Refinery",
   "item.grimms.netherite_hammer": "Netherite Hammer",
   "item.grimms.microscope": "Microscope",
   "item.grimms.transmutation_tablet": "Transmutation Tablet",
