Add some effects and shadering remove lobotomized from persistentstats

--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -1,92 +1,101 @@
 {
-  "death.attack.prestige_damage_boost.player": "%1$s was killed by while trying to escape %2$s\u0027s prestige boost",
-  "advancements.level_up_2.descr": "Level up to level 45",
   "item.grimmsmod.microscope": "Microscope",
   "item.grimmsmod.handheld_microscope": "Handheld Microscope",
-  "advancements.subpar_hammeration.title": "Subpar Hammeration",
-  "item.grimms.scalpel": "Scalpel",
   "item.grimmsmod.scalpel": "Scalpel",
-  "item_group.grimmsmod.grimms_mod": "Grimm\u0027s Mod",
   "gui.grimms.transmutation_gui.itemid": "Item registry name",
   "advancements.prestige.title": "Prestige",
   "gui.grimms.forgery_table_gui.button_forge": "Forge",
   "advancements.subpar_hammeration.descr": "Not there yet!",
   "death.attack.bleeding_damage.player": "%1$s lost too much blood whilst trying to escape %2$s",
-  "item.grimmsmod.placeholder": "Placeholder",
   "gui.grimmsmod.stats_gui.label_empty1": "/",
-  "item.grimms.mortar_and_pestle": "Mortar And Pestle",
-  "gui.grimms.prestige_upgrades_gui.label_name_na_level0_maxlevel0": "Name: N/A Level:0 MaxLevel:0",
-  "item.grimmsmod.fancier_clock": "Fancier Clock",
   "death.attack.item_level_damage_boost.item": "%1$s was killed by %2$s using %3$s",
   "advancements.install_grimms_mod_special.descr": "I wonder what this could be?",
   "advancements.level_up_2.title": "Level Up 2",
-  "death.attack.item_level_damage_boost.player": "%1$s died whilst trying to escape %2$s",
-  "gui.grimmsmod.stats_gui.button_prestige": "Prestige",
-  "entity.grimms.test_dummy": "Test Dummy",
   "item.grimmsmod.builders_wand": "Builders Wand",
   "gui.grimms.prestige_upgrades_gui.button_upgrade": "Upgrade",
   "advancements.level_up.descr": "Level up for the first time",
-  "gui.grimms.prestige_upgrades_gui.button_next": "Next",
+  "item.grimms.tin_can": "Tin Can",
   "gui.grimms.transmutation_gui.label_liquidate_item": "Liquidate Item",
   "effect.grimms.bleeding": "Bleeding",
   "item.grimms.katana": "Katana",
-  "gui.grimms.stats_gui.button_prestige": "Prestige",
   "item.grimms.diamond_hammer": "Diamond Hammer",
   "item.grimms.test_dummy_spawn_egg": "Test Dummy Spawn Egg",
   "advancements.serious_hammeration.descr": "Get it? Serious dedication, but hammer? ...? I will see myself out now...",
-  "item.grimms.builders_wand": "Builders Wand",
-  "item.grimms.placeholder": "Placeholder",
   "enchantment.grimms.xp_boost": "Xp Boost",
   "death.attack.item_level_damage_boost": "%1$s died",
   "block.grimms.distillery": "Distillery",
-  "advancements.install_grimms_mod.descr": "Install Grimm\u0027s Mod on minecraft, reworked, remade, updated",
-  "enchantment.grimms.soulbound": "Soulbound",
-  "gui.grimms.stats_gui.button_open_prestige_upgrades": "Open Prestige Upgrades",
   "item.grimms.fancier_clock": "Fancier Clock",
-  "item.grimms.multi_use_scalpel": "Multi Use Scalpel",
   "item.grimms.fancy_clock": "Fancy Clock",
   "gui.grimms.stats_gui.label_empty1": "/",
   "item.grimms.wooden_hammer": "Wooden Hammer",
   "item.grimms.iron_dust": "Iron Dust",
   "block.grimms.refinery": "Refinery",
   "item.grimms.netherite_hammer": "Netherite Hammer",
+  "advancements.prank_em_john.title": "Prank Em\u0027 John",
   "item.grimms.microscope": "Microscope",
-  "item.grimms.transmutation_tablet": "Transmutation Tablet",
-  "gui.grimms.prestige_upgrades_gui.sid": "0",
+  "effect.grimms.seizure": "Seizure",
   "gui.grimms.transmutation_gui.label_tv": "TV:",
-  "enchantment.grimms.sharp": "Sharp",
   "item_group.grimms.grimms_mod": "Grimm\u0027s Mod",
   "item.grimms.handheld_microscope": "Handheld Microscope",
-  "gui.grimms.prestige_upgrades_gui.prestigeupgradeid": "N/A",
   "item.grimmsmod.fancy_clock": "Fancy Clock",
-  "key.grimms.open_stats": "Open Stats",
-  "key.grimmsmod.open_stats": "Open Stats",
   "death.attack.prestige_damage_boost": "%1$s died",
   "item.grimms.mortar": "Mortar",
-  "item_group.grimms.grimms_mod_special": "Grimms Mod Special",
   "advancements.level_up.title": "Level Up",
-  "item.grimms.death_package": "Death Package",
+  "item.grimms.metal_pipe": "Metal Pipe",
   "item.grimms.disinfectant_scalpel": "Disinfectant Scalpel",
-  "block.grimms.forgery_table": "Forgery Table",
-  "block.grimms.land_mine": "Land Mine",
+  "advancements.prank_em_john.descr": "Metal pipe go bonk!",
+  "effect.grimms.super_dizziness": "Super Dizziness",
   "death.attack.prestige_damage_boost.item": "%1$s was killed by %2$s\u0027s prestige boost using %3$s",
   "advancements.install_grimms_mod_special.title": "Grimms Mod Specials",
   "item.grimms.iron_hammer": "Iron Hammer",
-  "death.attack.bleeding_damage.item": "%1$s was bled to death by %2$s using %3$s",
-  "advancements.serious_hammeration.title": "Serious Hammeration",
+  "effect.grimms.true_sight": "True Sight",
   "item.grimms.thrash": "Thrash",
   "item.grimmsmod.multi_use_scalpel": "Multi Use Scalpel",
-  "enchantment.grimms.lifesteal": "Lifesteal",
   "item.grimms.steel_dust": "Steel Dust",
+  "death.attack.bleeding_damage": "%1$s lost too much blood",
+  "key.categories.grimmsmod": "Grimm\u0027s Mod Keybinds",
+  "item.grimms.logo": "Logo",
+  "subtitles.metalpipehit": "Ow my ear hurt",
+  "death.attack.prestige_damage_boost.player": "%1$s was killed by while trying to escape %2$s\u0027s prestige boost",
+  "advancements.level_up_2.descr": "Level up to level 45",
+  "advancements.subpar_hammeration.title": "Subpar Hammeration",
+  "item.grimms.scalpel": "Scalpel",
+  "item_group.grimmsmod.grimms_mod": "Grimm\u0027s Mod",
+  "item.grimmsmod.placeholder": "Placeholder",
+  "item.grimms.mortar_and_pestle": "Mortar And Pestle",
+  "item.grimmsmod.fancier_clock": "Fancier Clock",
+  "gui.grimms.prestige_upgrades_gui.label_name_na_level0_maxlevel0": "Name: N/A Level:0 MaxLevel:0",
+  "death.attack.item_level_damage_boost.player": "%1$s died whilst trying to escape %2$s",
+  "gui.grimmsmod.stats_gui.button_prestige": "Prestige",
+  "entity.grimms.test_dummy": "Test Dummy",
+  "gui.grimms.prestige_upgrades_gui.button_next": "Next",
+  "gui.grimms.stats_gui.button_prestige": "Prestige",
+  "item.grimms.builders_wand": "Builders Wand",
+  "item.grimms.placeholder": "Placeholder",
+  "advancements.install_grimms_mod.descr": "Install Grimm\u0027s Mod on minecraft, reworked, remade, updated",
+  "enchantment.grimms.soulbound": "Soulbound",
+  "gui.grimms.stats_gui.button_open_prestige_upgrades": "Open Prestige Upgrades",
+  "item.grimms.multi_use_scalpel": "Multi Use Scalpel",
+  "item.grimms.transmutation_tablet": "Transmutation Tablet",
+  "gui.grimms.prestige_upgrades_gui.sid": "0",
+  "effect.grimms.dizziness": "Dizziness",
+  "enchantment.grimms.sharp": "Sharp",
+  "gui.grimms.prestige_upgrades_gui.prestigeupgradeid": "N/A",
+  "key.grimms.open_stats": "Open Stats",
+  "key.grimmsmod.open_stats": "Open Stats",
+  "item_group.grimms.grimms_mod_special": "Grimms Mod Special",
+  "item.grimms.death_package": "Death Package",
+  "block.grimms.forgery_table": "Forgery Table",
+  "block.grimms.land_mine": "Land Mine",
+  "death.attack.bleeding_damage.item": "%1$s was bled to death by %2$s using %3$s",
+  "advancements.serious_hammeration.title": "Serious Hammeration",
+  "enchantment.grimms.lifesteal": "Lifesteal",
   "advancements.prestige.descr": "Prestige for the first time for special benefits!",
   "item.grimms.coal_dust": "Coal Dust",
-  "death.attack.bleeding_damage": "%1$s lost too much blood",
   "gui.grimms.stats_gui.label_empty": "/",
-  "key.categories.grimmsmod": "Grimm\u0027s Mod Keybinds",
   "item_group.grimmsmod.grimms_mod_special": "Grimms Mod Special",
   "gui.grimmsmod.stats_gui.label_empty": "/",
   "item.grimms.steel": "Steel",
   "item.grimmsmod.logo": "Logo",
-  "item.grimms.logo": "Logo",
   "advancements.install_grimms_mod.title": "Install Grimm\u0027s Mod"
 }
