Add TVLiquidator allowing for automatic TV farms

--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -10,6 +10,7 @@
   "gui.grimmsmod.stats_gui.label_empty1": "/",
   "death.attack.item_level_damage_boost.item": "%1$s was killed by %2$s using %3$s",
   "advancements.install_grimms_mod_special.descr": "I wonder what this could be?",
+  "block.grimms.tv_liquidator": "TV Liquidator",
   "advancements.level_up_2.title": "Level Up 2",
   "item.grimmsmod.builders_wand": "Builders Wand",
   "gui.grimms.prestige_upgrades_gui.button_upgrade": "Upgrade",
@@ -38,8 +39,8 @@
   "item_group.grimms.grimms_mod": "Grimm\u0027s Mod",
   "item.grimms.handheld_microscope": "Handheld Microscope",
   "item.grimmsmod.fancy_clock": "Fancy Clock",
-  "death.attack.prestige_damage_boost": "%1$s died",
   "item.grimms.mortar": "Mortar",
+  "death.attack.prestige_damage_boost": "%1$s died",
   "advancements.level_up.title": "Level Up",
   "item.grimms.metal_pipe": "Metal Pipe",
   "item.grimms.disinfectant_scalpel": "Disinfectant Scalpel",
@@ -54,6 +55,7 @@
   "item.grimms.steel_dust": "Steel Dust",
   "death.attack.bleeding_damage": "%1$s lost too much blood",
   "key.categories.grimmsmod": "Grimm\u0027s Mod Keybinds",
+  "gui.grimms.tv_liquidator_gui.label_liquidate": "Liquidate",
   "item.grimms.logo": "Logo",
   "subtitles.metalpipehit": "Ow my ear hurt",
   "death.attack.prestige_damage_boost.player": "%1$s was killed by while trying to escape %2$s\u0027s prestige boost",
