--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -1,21 +1,26 @@
 {
-  "item.grimmsmod.microscope": "Microscope",
+  "advancements.victim.title": "Victim",
   "item.grimmsmod.handheld_microscope": "Handheld Microscope",
+  "item.grimmsmod.microscope": "Microscope",
   "item.grimmsmod.scalpel": "Scalpel",
+  "advancements.millionare.title": "Millionare",
   "gui.grimms.transmutation_gui.itemid": "Item registry name",
   "advancements.prestige.title": "Prestige",
   "gui.grimms.forgery_table_gui.button_forge": "Forge",
+  "advancements.transmuter.title": "Transmuter",
   "advancements.subpar_hammeration.descr": "Not there yet!",
   "death.attack.bleeding_damage.player": "%1$s lost too much blood whilst trying to escape %2$s",
   "gui.grimmsmod.stats_gui.label_empty1": "/",
   "death.attack.item_level_damage_boost.item": "%1$s was killed by %2$s using %3$s",
   "advancements.install_grimms_mod_special.descr": "I wonder what this could be?",
-  "block.grimms.tv_liquidator": "TV Liquidator",
   "advancements.level_up_2.title": "Level Up 2",
+  "block.grimms.tv_liquidator": "TV Liquidator",
+  "advancements.murderer.descr": "Kill a fellow player",
   "item.grimmsmod.builders_wand": "Builders Wand",
   "gui.grimms.prestige_upgrades_gui.button_upgrade": "Upgrade",
   "advancements.level_up.descr": "Level up for the first time",
   "item.grimms.tin_can": "Tin Can",
+  "advancements.transmutation_professor.descr": "Have 1M TV",
   "gui.grimms.transmutation_gui.label_liquidate_item": "Liquidate Item",
   "effect.grimms.bleeding": "Bleeding",
   "item.grimms.katana": "Katana",
@@ -25,6 +30,7 @@
   "enchantment.grimms.xp_boost": "Xp Boost",
   "death.attack.item_level_damage_boost": "%1$s died",
   "block.grimms.distillery": "Distillery",
+  "item.grimms.heavy_metal_pipe": "Heavy Metal Pipe",
   "item.grimms.fancier_clock": "Fancier Clock",
   "item.grimms.fancy_clock": "Fancy Clock",
   "gui.grimms.stats_gui.label_empty1": "/",
@@ -32,15 +38,17 @@
   "item.grimms.iron_dust": "Iron Dust",
   "block.grimms.refinery": "Refinery",
   "item.grimms.netherite_hammer": "Netherite Hammer",
+  "advancements.billionare.descr": "Have $1B",
   "advancements.prank_em_john.title": "Prank Em\u0027 John",
   "item.grimms.microscope": "Microscope",
   "effect.grimms.seizure": "Seizure",
   "gui.grimms.transmutation_gui.label_tv": "TV:",
+  "advancements.rich_guy.title": "Rich Guy",
   "item_group.grimms.grimms_mod": "Grimm\u0027s Mod",
   "item.grimms.handheld_microscope": "Handheld Microscope",
   "item.grimmsmod.fancy_clock": "Fancy Clock",
-  "item.grimms.mortar": "Mortar",
   "death.attack.prestige_damage_boost": "%1$s died",
+  "item.grimms.mortar": "Mortar",
   "advancements.level_up.title": "Level Up",
   "item.grimms.metal_pipe": "Metal Pipe",
   "item.grimms.disinfectant_scalpel": "Disinfectant Scalpel",
@@ -49,6 +57,7 @@
   "death.attack.prestige_damage_boost.item": "%1$s was killed by %2$s\u0027s prestige boost using %3$s",
   "advancements.install_grimms_mod_special.title": "Grimms Mod Specials",
   "item.grimms.iron_hammer": "Iron Hammer",
+  "advancements.grimms_mod_titles.title": "Grimms Mod Titles",
   "effect.grimms.true_sight": "True Sight",
   "item.grimms.thrash": "Thrash",
   "item.grimmsmod.multi_use_scalpel": "Multi Use Scalpel",
@@ -63,21 +72,29 @@
   "advancements.subpar_hammeration.title": "Subpar Hammeration",
   "item.grimms.scalpel": "Scalpel",
   "item_group.grimmsmod.grimms_mod": "Grimm\u0027s Mod",
+  "advancements.transmuter.descr": "Have 1K TV",
   "item.grimmsmod.placeholder": "Placeholder",
   "item.grimms.mortar_and_pestle": "Mortar And Pestle",
+  "advancements.transmutation_professor.title": "Transmutation Professor",
   "item.grimmsmod.fancier_clock": "Fancier Clock",
   "gui.grimms.prestige_upgrades_gui.label_name_na_level0_maxlevel0": "Name: N/A Level:0 MaxLevel:0",
+  "advancements.millionare.descr": "Have $1M",
   "death.attack.item_level_damage_boost.player": "%1$s died whilst trying to escape %2$s",
+  "advancements.victim.descr": "Get murdered by a fellow player",
   "gui.grimmsmod.stats_gui.button_prestige": "Prestige",
   "entity.grimms.test_dummy": "Test Dummy",
+  "advancements.murderer.title": "Murderer",
   "gui.grimms.prestige_upgrades_gui.button_next": "Next",
+  "advancements.grimms_mod_titles.descr": "Titles, gained by doing a specific action",
   "gui.grimms.stats_gui.button_prestige": "Prestige",
   "item.grimms.builders_wand": "Builders Wand",
   "item.grimms.placeholder": "Placeholder",
+  "block.grimms.basic_cobblestone_generator": "Basic Cobblestone Generator",
   "advancements.install_grimms_mod.descr": "Install Grimm\u0027s Mod on minecraft, reworked, remade, updated",
   "enchantment.grimms.soulbound": "Soulbound",
   "gui.grimms.stats_gui.button_open_prestige_upgrades": "Open Prestige Upgrades",
   "item.grimms.multi_use_scalpel": "Multi Use Scalpel",
+  "advancements.billionare.title": "Billionare",
   "item.grimms.transmutation_tablet": "Transmutation Tablet",
   "gui.grimms.prestige_upgrades_gui.sid": "0",
   "effect.grimms.dizziness": "Dizziness",
@@ -86,6 +103,7 @@
   "key.grimms.open_stats": "Open Stats",
   "key.grimmsmod.open_stats": "Open Stats",
   "item_group.grimms.grimms_mod_special": "Grimms Mod Special",
+  "advancements.rich_guy.descr": "Have $10K",
   "item.grimms.death_package": "Death Package",
   "block.grimms.forgery_table": "Forgery Table",
   "block.grimms.land_mine": "Land Mine",
