- Fix day counter config. - Add transfer money command. - Make Heavy blaster require coal dust. - Added refinery model.

--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -125,6 +125,7 @@
   "item.grimms.salt_bucket": "Salt Bucket",
   "item.grimms.diamond_hammer": "Diamond Hammer",
   "item.grimms.test_dummy_spawn_egg": "Test Dummy Spawn Egg",
+  "gui.grimms.heavy_blaster_gui.label_coal_dust": "\u003c\u003d\u003d Coal Dust",
   "advancements.serious_hammeration.descr": "Get it? Serious dedication, but hammer? ...? I will see myself out now...",
   "item.grimms.voidpack": "Voidpack",
   "block.grimms.tin_block": "Block of Tin",
