- Change config dir from root to grimm - Add Alloyed ingot

--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -5,8 +5,8 @@
   "trim_material.grimms.plutonium_trim": "Plutonium",
   "advancements.prestige.title": "Prestige",
   "item.grimms.tungsten_ingot": "Tungsten",
-  "advancements.subpar_hammeration.descr": "Not there yet!",
   "block.grimms.plutonium_ore": "Plutonium Ore",
+  "advancements.subpar_hammeration.descr": "Not there yet!",
   "death.attack.item_level_damage_boost.item": "%1$s was killed by %2$s using %3$s",
   "advancements.heavy_duty.title": "Heavy Duty",
   "advancements.murderer.descr": "Kill a fellow player",
@@ -34,9 +34,9 @@
   "advancements.rich_guy.title": "Rich Guy",
   "trim_material.grimms.lead_trim": "Lead",
   "death.attack.radiation_damage_type.item": "%1$s was irradiated by %2$s using %3$s",
-  "death.attack.prestige_damage_boost": "%1$s died",
-  "item.grimms.mortar": "Mortar",
   "item.grimms.champagne_bottle": "Champagne Bottle",
+  "item.grimms.mortar": "Mortar",
+  "death.attack.prestige_damage_boost": "%1$s died",
   "block.grimms.plutonium_block": "Block of Plutonium",
   "item.grimms.soda_bottle": "Soda Bottle",
   "item.grimms.photograph_of_motorcar": "Photograph Of Motorcar",
@@ -71,6 +71,7 @@
   "block.grimms.basic_cobblestone_generator": "Basic Cobblestone Generator",
   "advancements.install_grimms_mod.descr": "Install Grimm\u0027s Mod on minecraft, reworked, remade, updated",
   "item.grimms.multi_use_scalpel": "Multi Use Scalpel",
+  "item.grimms.alloyed_ingot": "Alloyed Ingot",
   "advancements.billionare.title": "Billionare",
   "item.grimms.galvanized_steel": "Galvanized Steel",
   "item.grimms.backpack_t_1": "Backpack T1",
