- Add composite gem - Balance ore spawning a bit - Add Composite Galloy Ingot - Change tin can recipe from 1 tin can to 4 - Add KeepXP prestige upgrade - Fix the prestige upgrade menu's next button - Fix the death counter

--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -176,6 +176,7 @@
   "gui.grimms.prestige_upgrades_gui.label_name_na_level0_maxlevel0": "Name: N/A Level:0 MaxLevel:0",
   "block.grimms.thorium_ore": "Thorium Ore",
   "trim_material.grimms.uranium_trim": "Uranium",
+  "item.grimms.composite_galloy_ingot": "Composite Galloy Ingot",
   "death.attack.item_level_damage_boost.player": "%1$s died whilst trying to escape %2$s",
   "advancements.victim.descr": "Get murdered by a fellow player",
   "gui.grimmsmod.stats_gui.button_prestige": "Prestige",
@@ -197,6 +198,7 @@
   "block.grimms.lead_ore": "Lead Ore",
   "block.grimms.heavy_blaster": "Heavy Blaster",
   "block.grimms.silver_ore": "Silver Ore",
+  "item.grimms.composite_gem": "Composite Gem",
   "gui.grimms.prestige_upgrades_gui.prestigeupgradeid": "N/A",
   "key.grimms.open_stats": "Open Stats",
   "item.grimms.rotten_food": "Rotten Food",
