- Add AlternativeDim1 - Add AlternativeDim2 - Add AlternativeDim3 - Add Interdimensional Trapezoid - Change item leveling from anything to only items with durability - Add Error - Add Error B - Add development chamber

--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -5,11 +5,12 @@
   "trim_material.grimms.plutonium_trim": "Plutonium",
   "advancements.prestige.title": "Prestige",
   "item.grimms.tungsten_ingot": "Tungsten",
-  "advancements.subpar_hammeration.descr": "Not there yet!",
   "block.grimms.plutonium_ore": "Plutonium Ore",
+  "advancements.subpar_hammeration.descr": "Not there yet!",
   "death.attack.item_level_damage_boost.item": "%1$s was killed by %2$s using %3$s",
   "advancements.heavy_duty.title": "Heavy Duty",
   "advancements.murderer.descr": "Kill a fellow player",
+  "item.grimms.interdimensional_trapezoid": "Interdimensional Trapezoid",
   "item.grimmsmod.builders_wand": "Builders Wand",
   "advancements.level_up.descr": "Level up for the first time",
   "advancements.little_timmy.title": "Little Timmy",
@@ -34,9 +35,9 @@
   "advancements.rich_guy.title": "Rich Guy",
   "trim_material.grimms.lead_trim": "Lead",
   "death.attack.radiation_damage_type.item": "%1$s was irradiated by %2$s using %3$s",
-  "death.attack.prestige_damage_boost": "%1$s died",
-  "item.grimms.mortar": "Mortar",
   "item.grimms.champagne_bottle": "Champagne Bottle",
+  "item.grimms.mortar": "Mortar",
+  "death.attack.prestige_damage_boost": "%1$s died",
   "block.grimms.plutonium_block": "Block of Plutonium",
   "item.grimms.soda_bottle": "Soda Bottle",
   "item.grimms.photograph_of_motorcar": "Photograph Of Motorcar",
@@ -76,6 +77,7 @@
   "advancements.billionare.title": "Billionare",
   "item.grimms.galvanized_steel": "Galvanized Steel",
   "gui.grimms.statistics_gui.label_personal": "Personal",
+  "item.grimms.error_b": "Error",
   "item.grimms.backpack_t_1": "Backpack T1",
   "item.grimms.transmutation_tablet": "Transmutation Tablet",
   "item.grimms.backpack_t_2": "Backpack T 2",
@@ -149,6 +151,7 @@
   "item.grimms.metal_pipe": "Metal Pipe",
   "item.grimms.iridium_ingot": "Iridium",
   "item.grimms.disinfectant_scalpel": "Disinfectant Scalpel",
+  "gui.grimms.development_chamber_gui.label_put_thrash_here_to_develop_it": "Put thrash here to.. develop it?",
   "item.grimms.volt_meter": "Volt Meter",
   "block.grimms.iridium_block": "Block of Iridium",
   "effect.grimms.super_dizziness": "Super Dizziness",
@@ -163,6 +166,7 @@
   "block.grimms.tungsten_ore": "Tungsten Ore",
   "item.grimms.logo": "Logo",
   "block.grimms.thorium_block": "Block of Thorium",
+  "item.grimms.error": "Error",
   "subtitles.metalpipehit": "Ow my ear hurt",
   "item.grimms.uranium_ingot": "Uranium",
   "trim_material.grimms.steel_trim": "Steel",
@@ -199,6 +203,7 @@
   "gui.grimms.stats_gui.label_prestige": "Prestige",
   "enchantment.grimms.soulbound": "Soulbound",
   "gui.grimms.stats_gui.button_open_prestige_upgrades": "Open Prestige Upgrades",
+  "block.grimms.development_chamber": "Mark IX Methane Generator",
   "effect.grimms.dizziness": "Dizziness",
   "block.grimms.lead_ore": "Lead Ore",
   "block.grimms.heavy_blaster": "Heavy Blaster",
