- Add Pressure tank, Variable Pressure tank, pipe and valve - Add resistor, heating element, cooling element and copper wire

--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -9,6 +9,7 @@
   "block.grimms.plutonium_ore": "Plutonium Ore",
   "advancements.subpar_hammeration.descr": "Not there yet!",
   "death.attack.item_level_damage_boost.item": "%1$s was killed by %2$s using %3$s",
+  "item.grimms.resistor": "Resistor",
   "advancements.heavy_duty.title": "Heavy Duty",
   "item.grimms.lockpick": "Lockpick",
   "advancements.murderer.descr": "Kill a fellow player",
@@ -36,6 +37,7 @@
   "item.grimms.microscope": "Microscope",
   "effect.grimms.seizure": "Seizure",
   "advancements.little_john.title": "Little John",
+  "item.grimms.copper_wire": "Copper Wire",
   "advancements.rich_guy.title": "Rich Guy",
   "trim_material.grimms.lead_trim": "Lead",
   "death.attack.radiation_damage_type.item": "%1$s was irradiated by %2$s using %3$s",
@@ -45,6 +47,7 @@
   "block.grimms.plutonium_block": "Block of Plutonium",
   "item.grimms.soda_bottle": "Soda Bottle",
   "item.grimms.photograph_of_motorcar": "Photograph Of Motorcar",
+  "item.grimms.variable_pressure_tank": "Variable Pressure Tank",
   "gui.grimms.key_gui.label_set_password": "Set Password",
   "advancements.prank_em_john.descr": "Metal pipe go bonk!",
   "advancements.comrade.title": "Comrade",
@@ -57,6 +60,7 @@
   "item.grimmsmod.multi_use_scalpel": "Multi Use Scalpel",
   "item.grimms.steel_dust": "Steel Dust",
   "block.grimms.silver_block": "Block of Silver",
+  "item.grimms.pressure_tank": "Pressure Tank",
   "advancements.packed_up.title": "Packed Up",
   "death.attack.bleeding_damage": "%1$s lost too much blood",
   "trim_material.grimms.tungsten_carbide_trim": "Tungsten Carbide",
@@ -89,9 +93,11 @@
   "item.grimms.backpack_t_2": "Backpack T 2",
   "gui.grimms.prestige_upgrades_gui.sid": "0",
   "item.grimms.backpack_t_3": "Backpack T3",
+  "item.grimms.heating_element": "Heating Element",
   "item.grimms.plutonium_ingot": "Plutonium",
   "item.grimms.dosimeter": "Dosimeter",
   "enchantment.grimms.sharp": "Sharp",
+  "item.grimms.cooling_element": "Cooling Element",
   "advancements.little_john.descr": "Time to illegally expand my 2m^2 Apartment!",
   "item.grimms.backpack_t_4": "Backpack T4",
   "item.grimms.backpack_t_5": "Backpack T5",
@@ -153,6 +159,7 @@
   "gui.grimms.refinery_gui.label_blaze_powder": "\u003c\u003d\u003d Blaze Powder",
   "item.grimms.despawn_wand": "Despawn Wand",
   "item_group.grimms.grimms_mod": "Grimm\u0027s Mod",
+  "item.grimms.pipe": "Pipe",
   "item.grimmsmod.fancy_clock": "Fancy Clock",
   "advancements.level_up.title": "Level Up",
   "item.grimms.full_tin_can": "Full Tin Can",
@@ -219,6 +226,7 @@
   "block.grimms.lead_ore": "Lead Ore",
   "block.grimms.heavy_blaster": "Heavy Blaster",
   "block.grimms.silver_ore": "Silver Ore",
+  "item.grimms.valve": "Valve",
   "item.grimms.composite_gem": "Composite Gem",
   "gui.grimms.prestige_upgrades_gui.prestigeupgradeid": "N/A",
   "key.grimms.open_stats": "Open Stats",
