- Add faulty necromancer's wand - Add bone types - Add Soulpiercer - Add Longsword

--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -2,12 +2,14 @@
   "item.grimmsmod.handheld_microscope": "Handheld Microscope",
   "item.grimmsmod.scalpel": "Scalpel",
   "advancements.millionare.title": "Millionare",
+  "item.grimms.soul_piercer": "Soul Piercer",
   "trim_material.grimms.plutonium_trim": "Plutonium",
   "advancements.prestige.title": "Prestige",
   "item.grimms.tungsten_ingot": "Tungsten",
   "gui.grimms.key_gui.password": "N/A",
   "block.grimms.plutonium_ore": "Plutonium Ore",
   "advancements.subpar_hammeration.descr": "Not there yet!",
+  "item.grimms.old_bone": "Old Bone",
   "death.attack.item_level_damage_boost.item": "%1$s was killed by %2$s using %3$s",
   "item.grimms.resistor": "Resistor",
   "advancements.heavy_duty.title": "Heavy Duty",
@@ -49,7 +51,9 @@
   "item.grimms.photograph_of_motorcar": "Photograph Of Motorcar",
   "item.grimms.variable_pressure_tank": "Variable Pressure Tank",
   "gui.grimms.key_gui.label_set_password": "Set Password",
+  "item.grimms.long_sword": "Long Sword",
   "advancements.prank_em_john.descr": "Metal pipe go bonk!",
+  "item.grimms.faulty_necromancers_wand": "Faulty Necromancers Wand",
   "advancements.comrade.title": "Comrade",
   "trim_material.grimms.iridium_trim": "Iridium",
   "item.grimms.lead_ingot": "Lead",
@@ -75,6 +79,7 @@
   "gui.grimms.math_exam_gui.answer": "Answer here",
   "block.grimms.tungsten_block": "Block of Tungsten",
   "advancements.millionare.descr": "Have $1M",
+  "item.grimms.clean_bone": "Clean Bone",
   "item.grimms.iridium_hammer": "Iridium Hammer",
   "gui.grimms.prestige_upgrades_gui.button_next": "Next",
   "gui.grimms.stats_gui.button_prestige": "Prestige",
@@ -229,6 +234,7 @@
   "item.grimms.valve": "Valve",
   "item.grimms.composite_gem": "Composite Gem",
   "gui.grimms.prestige_upgrades_gui.prestigeupgradeid": "N/A",
+  "item.grimms.charred_bone": "Charred Bone",
   "key.grimms.open_stats": "Open Stats",
   "item.grimms.rotten_food": "Rotten Food",
   "advancements.little_timmy.descr": "Get a perfect math exam score",
